--- a/style.css
+++ b/style.css
@@ -54,5 +54,21 @@ nav ul{
 
 .footerCompany {
   text-align: center;
+}
 
+.recipeList {
+  position: relative;
+}
+
+.recipeItems {
+  position: absolute;
+  top: 0;
+  list-style: none;
+}
+
+.recipeItemsTwo {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  list-style: none;
 }
